manifests/django-adminlte-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-adminlte-service
spec:
  selector:
    app: django-adminlte
  ports:
  - port: 5005
