manifests/django-soft-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-soft-ui-service
spec:
  type: NodePort
  selector:
    app: django-soft-ui
  ports:
  - port: 5005
    targetPort: 5005
    nodePort: 30001
